# cgo_test

./: CMakeLists.txt  main.go
cgo/cnh_hashing/: CMakeLists.txt  hash.go
cgo/cnh_hashing/src/: hash.cc  hash.h
